--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
+@font-face {
+  font-family: 'LeagueGothic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('LeagueGothic'), url('asset/LeagueGothic.otf') format('truetype');
+}
 body{
     background-color: #ecf0f1;
 }
 h1{
     text-align: center;
     font-size: 4em;
+    font-family: 'LeagueGothic', sans-serif;
 }
 #search{
     text-align: center;
