--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,47 @@
-@font-face {
-  font-family: 'LeagueGothic';
-  font-style: normal;
-  font-weight: normal;
-  src: local('LeagueGothic'), url('asset/LeagueGothic.otf') format('truetype');
-}
 body{
     background-color: #ecf0f1;
 }
 h1{
     text-align: center;
     font-size: 4em;
-    font-family: 'LeagueGothic', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+
 }
 #search{
     text-align: center;
 }
 input{
     font-size: 1.5em;
+
 }
 input[type="text"]{
     width:25em;
+}
+#youtube-header{
+    text-shadow: -1px 3px 6px rgba(150, 150, 150, 1);
+}
+#motion-header{
+    
+    /*background-color: #cd201f;*/
+    color: #FFFFFF;
+    padding: .15em .15em;
+    border-radius: 40%;
+    /* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top, #E52D27 0%, #B31217 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top, #E52D27 0%, #B31217 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top, #E52D27 0%, #B31217 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #E52D27), color-stop(1, #B31217));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top, #E52D27 0%, #B31217 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom, #E52D27 0%, #B31217 100%);
 }
